# mosaic

./: .gitignore  Dockerfile  README.md  demo.ipynb  demo_delete.ipynb  environment.yaml  pyproject.toml  requirements.txt  setup.py  split_value_counts.csv
config/: datasets.yaml  languages.yaml  logging.yaml  models.yaml  paths.yaml  peft.yaml  per_model_training.yaml  sweep.yaml  training.yaml  vllm.yaml
config/exp/: README.md
config/exp/b/: gemma-12b.yaml  llama-8b.yaml
config/exp/danskmri/: mosaic-4b.yaml
config/exp/mppec/: llama-8b.yaml
config/exp/mppec-b/: medgemma-4b.yaml
config/exp/mppecd-b/: medgemma-4b.yaml
config/exp/r_i/: medgemma-4b.yaml
config/exp/r_ii/: medgemma-4b.yaml
config/gemma/: README.md
config/prompts/: danskmri_v1.yaml  danskmri_v2.yaml  original_classes.yaml
data/mimic/: README.md  mimic.csv
mosaic/: __init__.py
mosaic/core/: constants.py  custom_functions.py  evals.py  finetune.py  inference.py  perplexity.py  preprocess_data.py  preprocess_utils.py  prompt_utils.py  translate.py  utils.py
scripts/: get_perplexity.sh  preprocess_data.sh  run_evaluation.sh  run_evaluation_danskmri.sh  run_training.sh  run_training_danskmri.sh  translate_csv.sh  translate_danskmri.sh
src/: evals.py  finetune.py  inference.py  translate.py  utils.py
src/config/: datasets.yaml  logging.yaml  models.yaml  vllm.yaml
src/scripts/: m.sh  mpe.sh  mppe.sh  mppec.sh  mppecd.sh
src/scripts/b/: b-en.sh  b.sh  mppec-b.sh  mppecd-b.sh
src/scripts/d/: d-en.sh  d.sh  mppec-d.sh
src/scripts/r/: r_i.sh  (+2 more)
viz/: padchest.ipynb  perplexity.ipynb
(+16 files in other folders)
