[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "mosaic-rad"
version = "0.1.0"
authors = [
  { name="aliswh" },
]
description = "Multilingual, Taxonomy-Agnostic, and Computationally Efficient Radiological Report Classification"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
]
dynamic = ["dependencies"]

[project.urls]
"Homepage" = "https://github.com/aliswh/mosaic"
"Bug Tracker" = "https://github.com/aliswh/mosaic/issues"